# fswtch

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  qualirs.toml
.omc/: ai-agent-seat-workflow.js
ai-agent-seat/: Cargo.toml
ai-agent-seat/src/: actor.rs  asr.rs  audio_dsp.rs  boundary.rs  bug.rs  call_core.rs  config.rs  control.rs  doubao_responses.rs  event_sub.rs  io.rs  lib.rs  llm.rs  mimo_tts.rs  orchestrator.rs  runtime.rs  tts.rs  tts_ws_codec.rs  voice_core.rs
ai-agent-seat/src/providers/: mimo_tts.rs  mod.rs  volcano_tts.rs
brain/: README.md  __init__.py  brain.py  esl.py  pipeline.py  real_pipeline.py
crates/fswtch/: Cargo.toml
crates/fswtch-aec3/: Cargo.toml  USAGE.md
crates/fswtch-aec3-sys/: Cargo.toml  build.rs
crates/fswtch-aec3-sys/cpp/: CMakeLists.txt
crates/fswtch-aec3-sys/cpp/shims/absl/algorithm/: container.h
crates/fswtch-aec3-sys/cpp/shims/absl/base/: nullability.h
crates/fswtch-aec3-sys/cpp/shims/absl/strings/: string_view.h
crates/fswtch-aec3-sys/cpp/shims/api/: field_trials_view.h
crates/fswtch-aec3-sys/cpp/shims/api/audio/: audio_frame.h  audio_processing.h
crates/fswtch-aec3-sys/cpp/shims/api/environment/: environment.h
crates/fswtch-aec3-sys/cpp/shims/common_audio/resampler/: push_sinc_resampler.h
crates/fswtch-aec3-sys/cpp/shims/common_audio/signal_processing/include/: signal_processing_library.h
crates/fswtch-aec3-sys/cpp/shims/modules/audio_processing/capture_mixer/: capture_mixer.h
crates/fswtch-aec3-sys/cpp/shims/rtc_base/: checks.h  gtest_prod_util.h  logging.h  race_checker.h  string_utils.h  swap_queue.h  thread_annotations.h
crates/fswtch-aec3-sys/cpp/shims/rtc_base/experiments/: field_trial_parser.h
crates/fswtch-aec3-sys/cpp/shims/rtc_base/numerics/: safe_conversions.h  safe_minmax.h
crates/fswtch-aec3-sys/cpp/shims/rtc_base/strings/: string_builder.h
crates/fswtch-aec3-sys/cpp/shims/rtc_base/system/: inline.h  rtc_export.h  unused.h
crates/fswtch-aec3-sys/cpp/shims/system_wrappers/include/: metrics.h
crates/fswtch-aec3-sys/cpp/wrapper/: aec3_c_api.cc  aec3_c_api.h  agc2_c_api.cc  agc2_c_api.h  fswtch_apm.h  hpf_c_api.cc
crates/fswtch-aec3/examples/: mod_aec3.rs  mod_apm.rs
crates/fswtch-aec3/porting-docs/: porting-record.md
crates/fswtch-aec3/src/: aec3.rs  agc2.rs  lib.rs  ns.rs
crates/fswtch-apm/: Cargo.toml  USAGE.md
crates/fswtch-apm-sys/: Cargo.toml  build.rs
crates/fswtch-apm-sys/cpp/: CMakeLists.txt
crates/fswtch-apm-sys/cpp/shims/absl/algorithm/: container.h
crates/fswtch-apm-sys/cpp/shims/absl/base/: nullability.h
crates/fswtch-apm-sys/cpp/shims/absl/strings/: string_view.h
crates/fswtch-apm-sys/cpp/shims/api/: field_trials_view.h
crates/fswtch-apm-sys/cpp/shims/api/audio/: audio_frame.h  audio_processing.h
crates/fswtch-apm-sys/cpp/shims/api/environment/: environment.h
crates/fswtch-apm-sys/cpp/shims/common_audio/resampler/: push_sinc_resampler.h
crates/fswtch-apm-sys/cpp/shims/common_audio/signal_processing/include/: signal_processing_library.h
crates/fswtch-apm-sys/cpp/shims/modules/audio_processing/capture_mixer/: capture_mixer.h
crates/fswtch-apm-sys/cpp/shims/rtc_base/: checks.h  gtest_prod_util.h  logging.h  race_checker.h  string_utils.h  swap_queue.h  thread_annotations.h
crates/fswtch-apm-sys/cpp/shims/rtc_base/experiments/: field_trial_parser.h
crates/fswtch-apm-sys/cpp/shims/rtc_base/numerics/: safe_conversions.h  safe_minmax.h
crates/fswtch-apm-sys/cpp/shims/rtc_base/strings/: string_builder.h
crates/fswtch-apm-sys/cpp/shims/rtc_base/system/: inline.h  rtc_export.h  unused.h
crates/fswtch-apm-sys/cpp/shims/system_wrappers/include/: metrics.h
crates/fswtch-apm-sys/cpp/wrapper/: aec3_c_api.cc  aec3_c_api.h  agc2_c_api.cc  hpf_c_api.h  ns_c_api.cc  ns_c_api.h
crates/fswtch-apm-sys/src/: lib.rs
crates/fswtch-apm/examples/: mod_aec3.rs  mod_apm.rs
crates/fswtch-apm/porting-docs/: porting-record.md
crates/fswtch-apm/src/: aec3.rs  agc2.rs  hpf.rs  lib.rs  ns.rs
crates/fswtch-src/: Cargo.toml
crates/fswtch-src/src/: lib.rs
crates/fswtch-sys/: Cargo.toml  build.rs
crates/fswtch-sys/src/: fallback.rs  lib.rs
crates/fswtch/examples/: mod_api_suite.rs  mod_app_playback_control.rs  mod_async_job_queue.rs  mod_buffer_demo.rs  mod_cdr_enricher.rs  mod_channel_vars.rs  mod_chatbot_bridge.rs  mod_config_xml.rs  mod_db_lookup.rs  mod_endpoint_skeleton.rs  mod_event_listener.rs  mod_event_sink.rs  mod_fswtch_speexdsp.rs  mod_hello.rs  mod_http_webhook.rs  mod_lifecycle.rs  mod_local_ai_bridge.rs  mod_media_bug_meter.rs  mod_metrics.rs  mod_rate_limiter.rs  mod_regex_match.rs  mod_registration_check.rs  mod_remote_vad.rs  mod_scheduler_task.rs  mod_stream_tools.rs  mod_utils_demo.rs  mod_vad_bot.rs  mod_vad_detect.rs  mod_vad_esl.rs  mod_vad_pcm.rs
crates/fswtch/src/: buffer.rs  caller.rs  channel.rs  codec.rs  command.rs  console.rs  core.rs  core_db.rs  endpoint.rs  estimators.rs  event.rs  exports.rs  file.rs  ivr.rs  jitterbuffer.rs  lib.rs  limit.rs  logging.rs  media.rs  module.rs  nat.rs  network_list.rs  packetizer.rs  plc.rs  pool.rs  regex.rs  resample.rs  rtp.rs  scheduler.rs  session.rs  speex.rs  status.rs  stream.rs  timer.rs  utils.rs  vad.rs  video.rs  xml.rs
crates/fswtch/src/dsp/: agc.rs  denoise.rs  mod.rs  params.rs  util.rs
docker/fswtch/conf/: freeswitch.xml  vars.xml
docker/fswtch/conf/autoload_configs/: fswtch_examples.conf.xml  logfile.conf.xml  modules.conf.xml
docs/: ffi-gap-wrappers-2.md  ffi-gap-wrappers.md  voice-call-migration.md
fswtch-unicast/: Cargo.toml  README.md  USAGE.md
fswtch-unicast/examples/: udp_peer_verify.py
fswtch-unicast/references/api-contract/: README.md  dialstring.md  media-protocol.md
fswtch-unicast/src/: io.rs  lib.rs  runtime.rs
issues/: 2026-07-16-resample-params-review.md  dsp-migration-review.md  earshot-vad-engine-review.md
mod-vad-bot/: Cargo.toml
mod-vad-bot/src/: boundary.rs  call_core.rs  doubao_responses.rs  event_sub.rs  io.rs  lib.rs  runtime.rs
mod-vad-bot/src/providers/: factory.rs
