[workspace]
members = [
    "crates/fswtch",
    "crates/fswtch-src",
    "crates/fswtch-sys",
]
resolver = "3"

[workspace.package]
version = "0.1.6"
edition = "2024"
authors = ["Yehor Smoliakov <egorsmkv@gmail.com>"]
license = "MIT"
description = "Rust bindings and helpers for writing FreeSWITCH modules"
readme = "README.md"
repository = "https://github.com/RustedBytes/fswtch"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
missing_safety_doc = "deny"
