[package]
name = "fswtch-aec3"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
fswtch-aec3-sys = { version = "0.1.8", path = "../fswtch-aec3-sys" }

[dev-dependencies]
# `mod_aec3` example is a FreeSWITCH cdylib module: it links fswtch (the FreeSWITCH bindings) plus
# the vendored AEC3 C++ via fswtch-aec3-sys. Build/run it where a FreeSWITCH lib is available
# (FREESWITCH_LIB_DIR / pkg-config) — the Docker smoke image, or `cargo check --example mod_aec3`
# for a headers-only type-check.
fswtch = { version = "0.1.8", path = "../fswtch" }

[[example]]
name = "mod_aec3"
crate-type = ["cdylib"]

[[example]]
name = "mod_apm"
crate-type = ["cdylib"]

[lints]
workspace = true
