[package]
name = "fswtch-apm-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
links = "fswtch_apm"
build = "build.rs"

[features]
# `bundled` (default) builds the vendored WebRTC AEC3 C++ from source via CMake.
default = ["bundled"]
bundled = []

[build-dependencies]
bindgen = { version = "0.71" }
cmake = "0.1"

[lints]
workspace = true
