[package]
name = "fswtch-apm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
fswtch-apm-sys = { version = "0.2.0", path = "../fswtch-apm-sys" }

[dev-dependencies]
# `mod_aec3` example is a FreeSWITCH cdylib module: it links fswtch (the FreeSWITCH bindings) plus
# the vendored AEC3 C++ via fswtch-apm-sys. Build/run it where a FreeSWITCH lib is available
# (FREESWITCH_LIB_DIR / pkg-config); or `cargo check --example mod_aec3` for a headers-only
# type-check without linking.
fswtch = { version = "0.2.0", path = "../fswtch" }

[[example]]
name = "mod_aec3"
crate-type = ["cdylib"]

[[example]]
name = "mod_apm"
crate-type = ["cdylib"]

[lints]
workspace = true
