[package]
name = "fswtch-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
links = "freeswitch"
build = "build.rs"

[features]
default = []
bindgen = ["dep:bindgen"]
bundled = ["bindgen", "dep:fswtch-src"]

[build-dependencies]
bindgen = { version = "0.71", optional = true }
fswtch-src = { version = "0.1.1", path = "../fswtch-src", optional = true }
pkg-config = "0.3"

[lints]
workspace = true
