[package]
name = "fswtch"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
fswtch-sys = { version = "0.1.8", path = "../fswtch-sys" }
# Pure-Rust neural VAD engine used by `VadEngine::Earshot`. No C/link deps, so it does not
# affect the `bundled` (headers-only) build.
earshot = "1"

[dev-dependencies]
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "time"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
base64 = "0.22"
fswtch-apm = { path = "../fswtch-apm" }

[features]
default = ["bundled"]
bundled = ["fswtch-sys/bundled"]
# Enables unit tests that call into the live FreeSWITCH C API. These tests cannot link in the
# headers-only `bundled` build (no freeswitch library is linked); enable `live_fs` only when a
# real FreeSWITCH build is available via `FREESWITCH_LIB_DIR` or pkg-config.
live_fs = []

[[example]]
name = "mod_api_suite"
crate-type = ["cdylib"]

[[example]]
name = "mod_async_job_queue"
crate-type = ["cdylib"]

[[example]]
name = "mod_app_playback_control"
crate-type = ["cdylib"]

[[example]]
name = "mod_cdr_enricher"
crate-type = ["cdylib"]

[[example]]
name = "mod_chatbot_bridge"
crate-type = ["cdylib"]

[[example]]
name = "mod_config_xml"
crate-type = ["cdylib"]

[[example]]
name = "mod_endpoint_skeleton"
crate-type = ["cdylib"]

[[example]]
name = "mod_event_sink"
crate-type = ["cdylib"]

[[example]]
name = "mod_hello"
crate-type = ["cdylib"]

[[example]]
name = "mod_http_webhook"
crate-type = ["cdylib"]

[[example]]
name = "mod_lifecycle"
crate-type = ["cdylib"]

[[example]]
name = "mod_media_bug_meter"
crate-type = ["cdylib"]

[[example]]
name = "mod_metrics"
crate-type = ["cdylib"]

[[example]]
name = "mod_rate_limiter"
crate-type = ["cdylib"]

[[example]]
name = "mod_registration_check"
crate-type = ["cdylib"]

[[example]]
name = "mod_remote_vad"
crate-type = ["cdylib"]

[[example]]
name = "mod_stream_tools"
crate-type = ["cdylib"]

[[example]]
name = "mod_channel_vars"
crate-type = ["cdylib"]

[[example]]
name = "mod_event_listener"
crate-type = ["cdylib"]

[[example]]
name = "mod_db_lookup"
crate-type = ["cdylib"]

[[example]]
name = "mod_regex_match"
crate-type = ["cdylib"]

[[example]]
name = "mod_buffer_demo"
crate-type = ["cdylib"]

[[example]]
name = "mod_scheduler_task"
crate-type = ["cdylib"]

[[example]]
name = "mod_utils_demo"
crate-type = ["cdylib"]

[lints]
workspace = true
